Fix logo text on Safari

--- a/recruit/sass/style.scss
+++ b/recruit/sass/style.scss
@@ -1075,6 +1075,7 @@ $pattern-background-size: 25em;
   /* Logo, contains Squirrel */
 
   #logo {
-    line-height: 2em;
+    top-padding: 2em;
+    line-height: 3em;
     font-size: 1.2em;
   }
